--- a/tests/golden/babel-formatting.org
+++ b/tests/golden/babel-formatting.org
@@ -1,8 +1,37 @@
 #+title: Tests
 
+* Testing sessions:
+:PROPERTIES:
+:header-args: :results output drawer :tangle :session timer_formatting_tests
+:END:
+
+#+begin_src python
+x = 1
+
+#+end_src
+
+#+RESULTS:
+:results:
+
+Cell Timer: 0:00:00
+:end:
+
+
+#+begin_src python
+print(x)
+#+end_src
+
+#+RESULTS:
+:results:
+1
+Cell Timer: 0:00:00
+:end:
+
+
+
 * Timer formatting
 :PROPERTIES:
-:header-args: :results output drawer :python "nix-shell --run python" :async t :tangle :session timer_formatting_tests
+:header-args: :results output drawer :python "nix-shell --run python"  :tangle :session timer_formatting_tests
 :END:
 
 Rounds by default, and shows by default:
@@ -12,6 +41,12 @@ print(1)
 import time
 time.sleep(3)
 #+end_src
+
+#+RESULTS:
+:results:
+1
+Cell Timer: 0:00:03
+:end:
 
 Turn off timer-show to hide it
 
@@ -34,12 +69,12 @@ print(1)
 #+RESULTS:
 :results:
 1
-%expect_skip Cell Timer: 0:00:00.002674
+%expect_skip Cell Timer: 0:00:00.000624
 :end:
 
 * Table formatting
 :PROPERTIES:
-:header-args: :results output drawer :python "nix-shell --run python" :async t :tangle :session table_formatting :timer-show no
+:header-args: :results output drawer :python "nix-shell --run python"  :tangle :session table_formatting :timer-show no
 :END:
 
 Dataframes are printed as org tables
@@ -65,6 +100,7 @@ print(df)
 |   3 | David   |  33 | Paris         |     78.9 |
 |   4 | Eva     |  22 | Tokyo         | 90.11111 |
 :end:
+
 
 To not print the index as idx, set something else as to be the index.
 
@@ -125,9 +161,9 @@ print(long_df)
 |   8 | 8 |
 |   9 | 9 |
 :end:
-** TODO Problem -- hangs when printing large dataframes.
+** Problem -- hangs when printing large dataframes.
 :PROPERTIES:
-:header-args: :results output drawer :python "nix-shell --run python" :async t :tangle :session table_formatting_large_dtfs :timer-show no
+:header-args: :results output drawer :python "nix-shell --run python"  :tangle :session table_formatting_large_dtfs :timer-show no
 :END:
 
 print_org_df sets max_rows to be 20 by default to avoid this issue.
@@ -248,21 +284,21 @@ print(df)
 
 #+RESULTS:
 :results:
-| idx | Name    | Age | City          |    Score |
-|-----+---------+-----+---------------+----------|
-|   0 | Joe     |  44 | New York      |     92.5 |
-|   1 | Eva     |  32 | San Francisco |     88.0 |
-|   2 | Charlie |  33 | Boston        |     95.2 |
-|   3 | David   |  33 | Paris         |     78.9 |
-|   4 | Eva     |  22 | Tokyo         | 90.11111 |
+| idx | Name    | Age | City          | Score |
+|-----+---------+-----+---------------+-------|
+|   0 | Joe     |  44 | New York      |  92.5 |
+|   1 | Eva     |  32 | San Francisco |  88.0 |
+|   2 | Charlie |  33 | Boston        |  95.2 |
+|   3 | David   |  33 | Paris         |  78.9 |
+|   4 | Eva     |  22 | Tokyo         |  90.1 |
 Space between dataframes
-| idx | Name    | Age | City          |    Score |
-|-----+---------+-----+---------------+----------|
-|   0 | Joe     |  44 | New York      |     92.5 |
-|   1 | Eva     |  32 | San Francisco |     88.0 |
-|   2 | Charlie |  33 | Boston        |     95.2 |
-|   3 | David   |  33 | Paris         |     78.9 |
-|   4 | Eva     |  22 | Tokyo         | 90.11111 |
+| idx  |Name|Age|City|Score |
+|---------------------------|
+| 0|Joe|44|New York|92.5 |
+| 1|Eva|32|San Francisco|88.0 |
+| 2|Charlie|33|Boston|95.2 |
+| 3|David|33|Paris|78.9 |
+| 4|Eva|22|Tokyo|90.1 |
 :end:
 
 In general space between dataframes requires ones below to be aligned.
@@ -276,13 +312,13 @@ print(df)
 
 #+RESULTS:
 :results:
-| idx | Name    | Age | City          |    Score |
-|-----+---------+-----+---------------+----------|
-|   0 | Joe     |  44 | New York      |     92.5 |
-|   1 | Eva     |  32 | San Francisco |     88.0 |
-|   2 | Charlie |  33 | Boston        |     95.2 |
-|   3 | David   |  33 | Paris         |     78.9 |
-|   4 | Eva     |  22 | Tokyo         | 90.11111 |
+| idx | Name    | Age | City          | Score |
+|-----+---------+-----+---------------+-------|
+|   0 | Joe     |  44 | New York      |  92.5 |
+|   1 | Eva     |  32 | San Francisco |  88.0 |
+|   2 | Charlie |  33 | Boston        |  95.2 |
+|   3 | David   |  33 | Paris         |  78.9 |
+|   4 | Eva     |  22 | Tokyo         |  90.1 |
 Space between dataframes
 | idx  |Name|Age|City|Score |
 |---------------------------|
@@ -290,15 +326,15 @@ Space between dataframes
 | 1|Eva|32|San Francisco|88.0 |
 | 2|Charlie|33|Boston|95.2 |
 | 3|David|33|Paris|78.9 |
-| 4|Eva|22|Tokyo|90.11111 |
+| 4|Eva|22|Tokyo|90.1 |
 :end:
 
 * Images
 :PROPERTIES:
-:header-args: :results output drawer :python "nix-shell --run python" :async t :tangle :session project :timer-show no
+:header-args: :results output drawer :python "nix-shell --run python"  :tangle :session project :timer-show no
 :END:
 
-pymockbabel mocks out python plotting to allow plots to be interspersed with printing, and allows multiple to be made. :)
+mocks out python plotting to allow plots to be interspersed with printing, and allows multiple to be made. :)
 
 #+begin_src python :results drawer
 import pandas as pd
@@ -314,23 +350,23 @@ print("tada!")
 #+RESULTS:
 :results:
 look!
-| idx | x |  y |
-|-----+---+----|
-|   0 | 1 | 10 |
-|   1 | 2 | 11 |
-|   2 | 3 | 12 |
-|   3 | 4 | 13 |
-|   4 | 5 | 14 |
-|   5 | 6 | 15 |
-|   6 | 7 | 16 |
-[[file:plots/formatting/plot_20240921_232347_9955034.png]]
+| idx  |x|y |
+|-----------|
+| 0|1|10 |
+| 1|2|11 |
+| 2|3|12 |
+| 3|4|13 |
+| 4|5|14 |
+| 5|6|15 |
+| 6|7|16 |
+[[file:plots/babel-formatting/plot_20241028_191807_1142437.png]]
 tada!
 :end:
 
 * DONE Make : Alerts on finishing
 * Alerts on finishing
 :PROPERTIES:
-:header-args: :results output drawer :python "nix-shell --run python" :async t :tangle :session alerts_on_finish :timer-show no
+:header-args: :results output drawer :python "nix-shell --run python"  :tangle :session alerts_on_finish :timer-show no
 :END:
 
 When this finishes, it alerts you in an emacs minibuffer, with a link back.
